@startuml Visitor Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class
!define INTERFACE interface

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Visitor>> LightYellow
    BorderColor<<Visitor>> DarkOrange
    BackgroundColor<<ConcreteVisitor>> LightBlue
    BorderColor<<ConcreteVisitor>> DarkBlue
    BackgroundColor<<Element>> LightGreen
    BorderColor<<Element>> DarkGreen
    BackgroundColor<<ValueObject>> Wheat
    BorderColor<<ValueObject>> Brown
}

package "org.elementarclash.battlefield.visitor" {

    ' ===== Visitor Interface =====
    INTERFACE TerrainVisitor <<Visitor>> {
        + visitFireUnit(unit: Unit): TerrainEffectResult
        + visitWaterUnit(unit: Unit): TerrainEffectResult
        + visitEarthUnit(unit: Unit): TerrainEffectResult
        + visitAirUnit(unit: Unit): TerrainEffectResult
        + getTerrainType(): Terrain
    }

    ' ===== Abstract Visitor (Template Method) =====
    ABSTRACT_CLASS AbstractTerrainVisitor <<Visitor>> {
        - terrainType: Terrain
        __
        # AbstractTerrainVisitor(terrainType: Terrain)
        __
        + getTerrainType(): Terrain
        + visitFireUnit(unit: Unit): TerrainEffectResult
        + visitWaterUnit(unit: Unit): TerrainEffectResult
        + visitEarthUnit(unit: Unit): TerrainEffectResult
        + visitAirUnit(unit: Unit): TerrainEffectResult
        __
        # createAttackBonus(bonus: int, description: String): TerrainEffectResult
        # createDefenseBonus(bonus: int, description: String): TerrainEffectResult
        # createPerTurnEffect(hpPerTurn: int, description: String): TerrainEffectResult
        # createDefenseAndHpEffect(defense: int, hp: int, desc: String): TerrainEffectResult
        # createTerrainChange(newTerrain: Terrain, desc: String): TerrainEffectResult
        # getTerrainName(): String
    }

    ' ===== Concrete Visitor =====
    class LavaTerrainVisitor <<ConcreteVisitor>> {
        - {static} FIRE_ATTACK_BONUS: int = 2
        - {static} WATER_HP_DRAIN: int = -5
        __
        + LavaTerrainVisitor()
        __
        + visitFireUnit(unit: Unit): TerrainEffectResult
        + visitWaterUnit(unit: Unit): TerrainEffectResult
    }

    ' ===== Value Object =====
    class TerrainEffectResult <<ValueObject>> <<record>> {
        + attackBonus: int
        + defenseBonus: int
        + hpPerTurn: int
        + terrainChange: Terrain
        + effectDescription: String
        __
        + {static} NEUTRAL: TerrainEffectResult
        __
        + hasCombatBonus(): boolean
        + hasPerTurnEffect(): boolean
        + triggersTerrainChange(): boolean
    }

    ' ===== Factory (Flyweight) =====
    class TerrainVisitorFactory {
        - {static} LAVA_VISITOR: LavaTerrainVisitor
        - {static} ICE_VISITOR: IceTerrainVisitor
        - {static} FOREST_VISITOR: ForestTerrainVisitor
        - {static} STONE_VISITOR: StoneTerrainVisitor
        - {static} DESERT_VISITOR: DesertTerrainVisitor
        __
        + {static} getVisitor(terrain: Terrain): TerrainVisitor
    }
}

package "org.elementarclash.units" {

    ' ===== Element =====
    ABSTRACT_CLASS Unit <<Element>> {
        - faction: Faction
        - currentHealth: int
        - position: Position
        __
        + accept(visitor: TerrainVisitor): TerrainEffectResult
        + takeDamage(damage: int): void
        + heal(amount: int): void
    }

    enum Faction {
        FIRE
        WATER
        EARTH
        AIR
    }
}

package "org.elementarclash.game" {

    ' ===== Client =====
    class Game {
        - battlefield: Battlefield
        - units: List<Unit>
        __
        - applyPerTurnTerrainEffects(): void
    }
}

package "org.elementarclash.battlefield" {
    class Battlefield {
        + getTerrainAt(position: Position): Terrain
    }

    enum Terrain {
        LAVA
        ICE
        FOREST
        STONE
        DESERT
    }
}

' ===== Visitor Pattern Relationships =====
TerrainVisitor <|.. AbstractTerrainVisitor
AbstractTerrainVisitor <|-- LavaTerrainVisitor

TerrainVisitor ..> TerrainEffectResult : <<returns>>
AbstractTerrainVisitor ..> TerrainEffectResult : <<creates>>

TerrainVisitorFactory ..> TerrainVisitor : <<provides>>
TerrainVisitorFactory --> LavaTerrainVisitor : <<caches>>

Unit ..> TerrainVisitor : <<accepts>>
Unit --> Faction
Unit ..> TerrainEffectResult : <<returns>>

Game ..> TerrainVisitorFactory : <<uses>>
Game --> Unit
Game --> Battlefield
Battlefield --> Terrain

' ===== Notes =====
note right of TerrainVisitor
  **Visitor Pattern (GoF #10)**

  **Visitor Interface**
  - One visit method per faction (4 total)
  - Faction-level dispatch (not unit-level)
  - Returns immutable TerrainEffectResult

  **Double Dispatch:**
  1. unit.accept(visitor)
  2. visitor.visitFireUnit(unit)
  3. Return terrain-specific effect
end note

note bottom of AbstractTerrainVisitor
  **Template Method + Visitor**

  **DRY Principle:**
  - Default NEUTRAL implementations
  - Helper methods eliminate duplication
  - Concrete visitors only override
    methods for non-neutral effects

  **Helper Methods:**
  createAttackBonus(), createDefenseBonus(),
  createPerTurnEffect(), createTerrainChange()
end note

note right of LavaTerrainVisitor
  **Concrete Visitor Example**

  **Lava Terrain Effects:**
  - Fire units: +2 Attack
  - Water units: -5 HP per turn
  - Earth/Air: NEUTRAL (inherited)

  **Implementation:**
  Only overrides 2 visit methods.
  Uses helper methods from base class.

  **Example:**
  public TerrainEffectResult visitFireUnit(Unit unit) {
      return createAttackBonus(
          FIRE_ATTACK_BONUS,
          String.format("%s: +%d Angriff auf %s",
              unit.getName(), FIRE_ATTACK_BONUS, getTerrainName())
      );
  }
end note

note bottom of TerrainEffectResult
  **Immutable Value Object**

  Contains all possible terrain effects:
  - Combat bonuses (attack/defense)
  - Per-turn effects (HP drain/heal)
  - Terrain transformations

  **NEUTRAL Constant:**
  All values 0, no terrain change.
  Used for default behavior.

  **Validation:**
  Constructor validates ranges:
  - Bonuses: -10 to +10
  - HP: -20 to +20
end note

note top of TerrainVisitorFactory
  **Flyweight Pattern**

  All visitors are stateless
  → Cached as singletons

  **Why:**
  - Reduces object creation
  - Visitors have no mutable state
  - Same instance reused across game

  **Usage:**
  TerrainVisitor visitor =
      TerrainVisitorFactory.getVisitor(Terrain.LAVA);
end note

note right of Unit
  **Element (accepts Visitor)**

  **Double Dispatch Implementation:**

  public TerrainEffectResult accept(TerrainVisitor visitor) {
      return switch (faction) {
          case FIRE  -> visitor.visitFireUnit(this);
          case WATER -> visitor.visitWaterUnit(this);
          case EARTH -> visitor.visitEarthUnit(this);
          case AIR   -> visitor.visitAirUnit(this);
      };
  }

  Dispatches by faction to appropriate visit method.
end note

note left of Game
  **Client Example**

  **Per-Turn Terrain Effects:**

  private void applyPerTurnTerrainEffects() {
      for (Unit unit : units) {
          if (!unit.isAlive()) continue;

          Terrain terrain = battlefield.getTerrainAt(
              unit.getPosition()
          );
          TerrainVisitor visitor =
              TerrainVisitorFactory.getVisitor(terrain);
          TerrainEffectResult effect = unit.accept(visitor);

          if (effect.hasPerTurnEffect()) {
              int hpChange = effect.hpPerTurn();
              if (hpChange > 0) unit.heal(hpChange);
              else unit.takeDamage(-hpChange);
          }
      }
  }
end note

note as N1
  **Terrain-Unit Interaction Matrix**

  5 Terrains × 4 Factions = 20 Combinations

  ┌─────────┬───────┬────────┬───────┬──────┐
  │ Terrain │ Fire  │ Water  │ Earth │ Air  │
  ├─────────┼───────┼────────┼───────┼──────┤
  │ LAVA    │ +2ATK │ -5HP/t │  --   │  --  │
  │ ICE     │ Melt  │ +2DEF  │  --   │  --  │
  │         │       │ +5HP/t │       │      │
  │ FOREST  │ +2DEF │ +2DEF  │ +2DEF │+2DEF │
  │ STONE   │  --   │   --   │ +2DEF │  --  │
  │ DESERT  │  --   │   --   │  --   │  --  │
  └─────────┴───────┴────────┴───────┴──────┘

  **Extensibility:**
  Adding new terrain = 1 new visitor class
  Adding new faction = Update all 5 visitors
end note

@enduml
